# cvlac

./: .gitignore  README.md  SCRAP.sql  docker-compose.yml  ejemplos_cod_rh.txt  main.py  pyproject.toml  requirements.txt  restore_dump.sh
config/: __init__.py  connection.py  integration.json  logger.py  settings.py
extractors/: __init__.py  actividades_evaluador.py  actividades_formacion.py  apropiacion_social.py  areas_actuacion.py  demas_trabajos.py  experiencia.py  formacion.py  identificacion.py  idioma.py  lineas_investigacion.py  produccion_artes.py  produccion_bibliografica.py  produccion_tec.py  proyectos.py  reconocimientos.py  redes_sociales.py  utils.py
reporting/: __init__.py  reporting.py
scripts/: diagnostic_cvlac.sh  integrate_cvlac_gruplac.py  restore_dump.sh  setup_cvlac_db.sh
sql/: create_db.sql  cvlac_db.sql
validators/: data_validator.py
