[tool.poetry]
name = "cvlac"
version = "0.1.0"
description = ""
authors = ["jose9806"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.13.3"
psycopg2-binary = "^2.9.10"
black = "^25.1.0"
unidecode = "^1.3.8"
urllib3 = "^2.4.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
